# Fractal-Generator

./: .gitignore  Cargo.toml  Julias.rs  LICENSE  Procfile  README.md  fractal.rs  main.rs  rust-toolchain
mosaic/: Cargo.toml
resources/: cool.css
src/: Fractal.rs  Julias.rs  auto_random.rs  barnsley.rs  fractal.rs  julia_sets.rs  julias.rs  main.rs  mandelbrot.rs  menu.rs  multi_julia_set.rs  util.rs
static/: gen.html.tera  index.html.tera
templates/: about.html.tera  base.html.tera  cool.css  gen.html.tera  index.html.tera
tests/: mandelbrot_tests.rs
