[package]
name = "fractal_generator"
version = "0.3.0"
authors = ["Simon Barton <simon5@pdx.edu>", "Liam Rotchford <rliam@pdx.edu>"]
edition = "2018"

[dependencies]
num = "0.1.27"
image = "0.22.0"
rand = "0.7.0"
rocket = "0.4.5"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates"]